// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBase should render correctly 1`] = `
<TouchableOpacity
  activeOpacity={1}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#F2F4F6",
      "borderRadius": 20,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "paddingHorizontal": 16,
    }
  }
>
  <Icon
    color="Default"
    name="Bank"
    size="16"
    style={
      {
        "marginRight": 8,
      }
    }
  />
  <Text
    style={
      {
        "color": "#24272A",
      }
    }
    variant="sBodyMD"
  >
    Click me!
  </Text>
</TouchableOpacity>
`;

exports[`ButtonBase should render correctly when disabled 1`] = `
<TouchableOpacity
  activeOpacity={1}
  disabled={true}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#F2F4F6",
      "borderRadius": 20,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "opacity": 0.5,
      "paddingHorizontal": 16,
    }
  }
>
  <Icon
    color="Default"
    name="Bank"
    size="16"
    style={
      {
        "marginRight": 8,
      }
    }
  />
  <Text
    style={
      {
        "color": "#24272A",
      }
    }
    variant="sBodyMD"
  >
    Click me!
  </Text>
</TouchableOpacity>
`;
